--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.73.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "firebase": "8.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
